<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">番茄快长</string>
    <string name="welcome">早！</string>
    <string name="add_hint">新建</string>
    <string name="add_task_hint">成长任务</string>
    <string name="add_class_hint">成长方向</string>
    <string name="add_reward_hint">成长奖励</string>
    <string name="else_hint">其他</string>
    <string name="setting_hint">设置</string>
    <string name="about_hint">关于</string>
    <string name="reward_hint">给自己一点惊喜如何？</string>
    <string name="slide_to_add_hint">☜滑动添加成长任务哦~</string>
    <string name="fall_to_a_task">哒哒哒！成长任务开始咯！</string>
    <string name="get_a_reward">当当当当！结果出来啦！</string>
    <string name="content_image_aim">目标</string>
    <string name="content_image_start">开始</string>
    <string name="content_image_gift">礼物</string>
    <string name="content_image_sounds">声音控制</string>
    <string name="content_image_giveup">声音控制</string>
    <string name="finish_a_task">成长任务完成~好样的！来奖励下自己吧~！</string>
    <string name="encourage_message">坚持！90%的人就是这么放弃的，超越自己！</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>