<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FLAT_CLOUDS"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingTop="12dp" >

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/FLAT_MIDNIGHT_BLUE"
        android:textIsSelectable="false"
        android:textSize="36sp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_hint"
        android:textColor="@color/FLAT_WET_ASPHALT"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/FLAT_ASBESTOS" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task_hint"
        android:textColor="@color/FLAT_WET_ASPHALT"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_class_hint"
        android:textColor="@color/FLAT_WET_ASPHALT"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_reward_hint"
        android:textColor="@color/FLAT_WET_ASPHALT"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/FLAT_CLOUDS" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/else_hint"
        android:textColor="@color/FLAT_WET_ASPHALT"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/FLAT_ASBESTOS" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_hint"
        android:textColor="@color/FLAT_WET_ASPHALT"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_hint"
        android:textColor="@color/FLAT_WET_ASPHALT"
        android:textSize="16sp" />

</LinearLayout>